--- a/dataExploration.ipynb
+++ b/dataExploration.ipynb
@@ -6,7 +6,7 @@
       "name": "dataExploration.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN6xO7QGXJyMSXgWDbm/+fu",
+      "authorship_tag": "ABX9TyMLHJbN/t2YXJygbzP7qxFI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -916,6 +916,15 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "need to continue exploring and visuzlizing data below."
+      ],
+      "metadata": {
+        "id": "YkZHR3CMX-89"
+      }
     }
   ]
 }
