--- a/CIND820_Initial_Results.ipynb
+++ b/CIND820_Initial_Results.ipynb
@@ -15,7 +15,7 @@
         "WKsSl7fdaBf9"
       ],
       "mount_file_id": "1yq9R1GYew-EN37t5dnhleHpPDm7OptE1",
-      "authorship_tag": "ABX9TyMWjee42HjcDpXnOsj/iswH",
+      "authorship_tag": "ABX9TyPBDi35LTe4sWL5CmbRp++D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/swb1113/CIND820/blob/main/CIND820_Initial_Results.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Sang Won Baek**\n",
+        "\n",
+        "**Student ID: 501144120**\n",
+        "\n",
+        "**Supervisor: Uzair Ahmad, Ph.D**\n",
+        "\n",
+        "**Date: June 27, 2022**"
+      ],
+      "metadata": {
+        "id": "uLTbXjD0QaWk"
+      }
     },
     {
       "cell_type": "markdown",
@@ -77,7 +92,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "hGeq5SNmPI0d",
         "outputId": "6268eba0-7597-4b44-b2e5-641999ee3a66"
@@ -112,7 +128,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "qLjh1e6tQDDs",
         "outputId": "bf99833a-3938-461f-bdb9-c5772e5af72e"
@@ -961,7 +978,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "apYSKIJ7R68i",
         "outputId": "642c9a29-1f11-4845-c846-7b7968488154"
@@ -1002,7 +1020,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "HRGVwKn_gut5",
         "outputId": "c66da49e-aec6-4bca-dd1b-96bb4ee535ba"
@@ -1470,7 +1489,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "qNvOodU6vnTa",
         "outputId": "e0a8bbb8-94de-488b-eab0-91d2a7145db6"
@@ -1527,7 +1547,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "uktGNK4crGsk",
         "outputId": "07731ee4-62e9-4ed1-cae5-b52da6c8ba99"
@@ -2584,7 +2605,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "pUD2zetHpb-K",
         "outputId": "c8119996-b955-46c4-bc9e-5b9b774e7302"
