--- a/CIND820_Initial_Results.ipynb
+++ b/CIND820_Initial_Results.ipynb
@@ -9,13 +9,12 @@
         "u5gOT3sKQ8yA",
         "JjDqHAakdVVt",
         "bd5oiaUHRLlU",
-        "AfrpuikXZ_JF",
         "g-zrwVKVudus",
         "hDtEpQS655Ni",
         "WKsSl7fdaBf9"
       ],
       "mount_file_id": "1yq9R1GYew-EN37t5dnhleHpPDm7OptE1",
-      "authorship_tag": "ABX9TyPBDi35LTe4sWL5CmbRp++D",
+      "authorship_tag": "ABX9TyNTMw2+aLm+kn5xj/is6vhQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +45,9 @@
         "\n",
         "**Supervisor: Uzair Ahmad, Ph.D**\n",
         "\n",
-        "**Date: June 27, 2022**"
+        "**Date: June 27, 2022**\n",
+        "\n",
+        "**GITHUB REPOSITORY:** https://github.com/swb1113/CIND820/blob/main/CIND820_Initial_Results.ipynb \n"
       ],
       "metadata": {
         "id": "uLTbXjD0QaWk"
@@ -92,13 +93,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "hGeq5SNmPI0d",
         "outputId": "6268eba0-7597-4b44-b2e5-641999ee3a66"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "f2UC2PacP_KT"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,13 +128,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "qLjh1e6tQDDs",
         "outputId": "bf99833a-3938-461f-bdb9-c5772e5af72e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +221,7 @@
       "metadata": {
         "id": "wbCk5Cjgbf0U"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -275,7 +274,7 @@
       "metadata": {
         "id": "87NWtrZ0Rbvv"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +290,7 @@
         "id": "esimECQ-RzWV",
         "outputId": "f08241b3-2afc-4c3e-9b54-3f98f22b2369"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +521,7 @@
         "id": "OrOKxmhNR453",
         "outputId": "50d0e581-22fc-4f19-c5d7-517f9ab8b2b4"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +752,7 @@
         "id": "yXrTSZRbonqT",
         "outputId": "1620635b-182b-4a82-b88f-d2d4b37bcad9"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,13 +977,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "apYSKIJ7R68i",
         "outputId": "642c9a29-1f11-4845-c846-7b7968488154"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1020,13 +1018,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HRGVwKn_gut5",
         "outputId": "c66da49e-aec6-4bca-dd1b-96bb4ee535ba"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,7 +1056,7 @@
         "id": "pvmWVHfpSBHY",
         "outputId": "96d63a9f-1851-47c1-d775-9de576b3c05f"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1301,7 +1298,7 @@
         "id": "H6FcCBjirdHp",
         "outputId": "eac8c075-f212-48ec-e273-40ed6b8d204b"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1489,13 +1486,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "qNvOodU6vnTa",
         "outputId": "e0a8bbb8-94de-488b-eab0-91d2a7145db6"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1547,13 +1543,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uktGNK4crGsk",
         "outputId": "07731ee4-62e9-4ed1-cae5-b52da6c8ba99"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1588,7 +1583,7 @@
         },
         "outputId": "c0cf3f34-37df-4005-8c8c-c0546c082526"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1644,7 +1639,7 @@
         "id": "4DRt20bnsQU_",
         "outputId": "3efdefbc-afd6-4837-885d-dbce67924ae9"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1726,7 +1721,7 @@
         "id": "8ECjL44nvbah",
         "outputId": "8c8d200c-4f32-4068-fea0-93771dd73ce5"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1789,7 +1784,7 @@
         "id": "bxjiNLW1xu3Q",
         "outputId": "699121a1-0f4e-44a0-90e9-baa296b8ff11"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1885,7 +1880,7 @@
         "id": "HEn_pT5j3v0S",
         "outputId": "fa747789-48a0-4378-a418-ae1905921ef9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1980,7 +1975,7 @@
         "id": "3xZbMOcRGjK2",
         "outputId": "5be196b8-b03a-41ba-d83b-239666500eee"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2041,7 +2036,7 @@
         "id": "KedP1ClNHY9N",
         "outputId": "afc6c60b-123f-45c7-9d21-277f3e6c28f3"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2102,7 +2097,7 @@
         "id": "XrG6DMDMHYvN",
         "outputId": "e28cf79f-e3eb-4376-8cf1-809c01f42d95"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2172,7 +2167,7 @@
         "id": "gquN_N32_QPW",
         "outputId": "131622f1-6e3a-4eb1-b9db-3b949b8b5b0d"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2245,7 +2240,7 @@
         "id": "y0p_TgxDXC36",
         "outputId": "dc3d387d-ed3f-4693-99f9-8c4eb2a419a0"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2305,7 +2300,7 @@
         "id": "eCQgpFhIX9-N",
         "outputId": "9050a6a0-a0de-4ac8-b7dc-c1d5958bb0e5"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2366,7 +2361,7 @@
         "id": "x-41qvXvYGQi",
         "outputId": "8a437fe0-0d5e-41ce-8e5d-0017685f86d7"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2427,7 +2422,7 @@
         "id": "oXfywUZqYGKk",
         "outputId": "d81f5978-5e7c-4547-8b7d-4dc8402ec326"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2488,7 +2483,7 @@
         "id": "aYzjci7_YGDa",
         "outputId": "a0bbeadd-3706-4a6a-90e3-f9854be2e649"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2552,7 +2547,7 @@
         "id": "VZ1eCADBPVr1",
         "outputId": "0cc5d48c-ecc3-41ef-d63d-7b8a2e7ffca5"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2605,13 +2600,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pUD2zetHpb-K",
         "outputId": "c8119996-b955-46c4-bc9e-5b9b774e7302"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2670,7 +2664,7 @@
         "id": "I_edMZnOhA5i",
         "outputId": "04fa2676-e26a-4554-93f5-23b2cf1da712"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2989,7 +2983,7 @@
         },
         "outputId": "49994d30-f54f-4cb7-9c87-066c5c8ad535"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3219,12 +3213,13 @@
     {
       "cell_type": "code",
       "source": [
-        "target=\"HeartDisease\""
+        "target=\"HeartDisease\"\n",
+        "y=df[target].values"
       ],
       "metadata": {
         "id": "59_TsThI-8c3"
       },
-      "execution_count": 75,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -3246,7 +3241,7 @@
       "metadata": {
         "id": "y_FAC3Cz1k75"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
